src/test/resources/scripts/language/parser/invalid/cast/noMultiCast.sbsc
// multiple arguments cannot be passed to cast

println(str(3, 4));

return false;